# book-register

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
