[package]
name = "book_register"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow      = "1"
chrono      = "0.4"
clap        = { version = "4", features = ["derive"] }
dotenvy     = "0.15"
regex       = "1"
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json  = "1"
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
